--- a/docs/main.css
+++ b/docs/main.css
@@ -39,26 +39,17 @@ audio, video {
 	vertical-align: baseline;
 }
 
-body {
-	background-color: #ffffff;
+html {
 	font-size: 62.5%; /* 10px */
 }
 
-/*
-h1 {
-	font-size: 55px;
-	font-weight: 900;
-	text-align: center;
-	font-family: Arvo, Times, "Times New Roman"; 
-	color: #007f7f;
-	text-shadow: 0 1px 1px #8c8c90;
-	margin-top: 20px;
+body {
+	background-color: #ffffff;
+	font-size: 1.5rem; /* 15px */
 }
-*/
 
 h1 {
-	padding-top: 0;
-	font-size: 40px;
+	font-size: 4rem;
 	font-weight: 800;
 	font-family: Arvo, Times, "Times New Roman"; 
 	color: white;
@@ -67,7 +58,7 @@ h1 {
 }
 
 h2 {
-	font-size: 30px;
+	font-size: 3rem;
 	font-weight: 700;
 	font-style: italic;
 	font-family: Arvo, Times, "Times New Roman"; 
@@ -76,7 +67,7 @@ h2 {
 }
 
 h3 {
-	font-size: 20px;
+	font-size: 2rem;
 	font-weight: 300;
 	font-family: Arvo, Times, "Times New Roman"; 
 	color: #2b2d32;
@@ -86,7 +77,7 @@ h3 {
 }
 
 h4 {
-	font-size: 15px;
+	font-size: 1.5rem;
 	font-weight: 100;
 	font-style: italic;
 	font-family: Arvo, Times, "Times New Roman"; 
@@ -96,7 +87,6 @@ h4 {
 }
 
 p, #hover {
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: #8c8c90;
@@ -106,7 +96,7 @@ p, #hover {
 a {
 	text-decoration: none;
 	font-style: italic;
-	font-size: 12px;
+	font-size: 1.2rem;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(255, 255, 255, 0.5);
@@ -118,23 +108,17 @@ header {
 	background: radial-gradient(circle, gainsboro 20%, lightgray 40%, silver 60%, darkgray 80%, gray 100%);
 	/*background-image: url(background.jpg);*/
 	box-shadow: 0 1px 1px black;
-	/* header in fixed position (following 3 properties)*/
-	position: fixed; 
-	width: 100%;
-	top: 0;
-	z-index: 1;
+	text-align: center;
 }
 
 main {
-	/* 
-		216px top margin from start of the page
-		30px top margin from header 
-	*/
-	margin-top: 216px;
+	width: 50%;
+	margin: auto;
+	/* Hide content that extends beyond container boundaries */
+	overflow: hidden;
 }
 
 article {
-	width: 960px;
 	margin: 0 auto 0 auto;
 }
 
@@ -142,22 +126,22 @@ section {
 	background-color: #f0f0f0;
 	margin-top: 10px;
 	border: 1px solid #000000;
-	padding: 10px 10px 10px 10px;
+	padding: 10px;
 	border-radius: 10px;
 	box-shadow: 0 1px 1px black;
 }
 
 footer {
 	background: linear-gradient(to top, #2b2d32, #3b3d42);
-	margin: 30px auto 0 auto;
+	margin: 10px auto 0 auto;
 	color: #8c8c90;
 	text-align: center;
-	padding: 20px 0 20px 0;
+	padding: 20px 0;
 	box-shadow: 0 1px 1px black;
 }
 
 time {
-	font-size: 12px;
+	font-size: 1.2rem;
 	font-style: italic;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
@@ -183,7 +167,6 @@ ol {
 }
 
 li {
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: #8c8c90;
@@ -191,7 +174,6 @@ li {
 }
 
 code {
-	font-size: 15px;
 	font-weight: 100;
 	font-family: 'Roboto Mono', Courier, "Courier New";
 	color: #8c8c90;
@@ -201,6 +183,7 @@ code {
 	padding: 10px;
 	border-left: 5px solid #007f7f;
 	display: block;
+	overflow: hidden;
 }
 
 /*----------------------------------------------------------------------------*/
@@ -220,7 +203,6 @@ a:hover .social-icon {
 }
 
 .result-wrapper {
-	font-size: 15px;
 	font-weight: 100;
 	font-family: 'Roboto Mono', Courier, "Courier New";
 	color: #8c8c90;
@@ -277,16 +259,17 @@ a:hover .social-icon {
 
 article header {
 	background: #2b2d32;
-	padding: 10px 0 10px 0;
+	padding: 10px 0;
+	margin: 10px auto 0 auto;
 	border-radius: 10px;
-	position: static;
+	text-align: left;
 }
 
 /* Links inside navigation bar */
 nav a {
-	padding: 14px 16px;
+	padding: 0 10px;
 	font-style: normal;
-	font-size: 19px;
+	font-size: 2rem;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(255, 255, 255, 0.5);
@@ -296,7 +279,6 @@ nav a {
 }
 
 section a {
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(0,173, 239, 0.5);
@@ -324,7 +306,7 @@ section a:hover {
   /* Green font color */
   color: #008000;
   /* Adjust the padding */
-  padding: 5px 0 5px 0;
+  padding: 5px 0;
   /* Make the text all uppercase */
   text-transform: uppercase;
   text-align: center;
@@ -345,7 +327,7 @@ section a:hover {
 	padding: 14px 16px;
 	border: none;
 	outline: none;
-	font-size: 19px;
+	font-size: 2rem;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(255, 255, 255, 0.5);
@@ -387,7 +369,7 @@ nav a:hover, .dropdown:hover .dropbtn {
 	/* Links are inline by default */
 	display: block;
 	text-align: left;
-	font-size: 15px;
+	font-size: 1.5rem;
 	transition: .3s background-color;
 	text-shadow: none;
 }
@@ -406,7 +388,7 @@ nav a:hover, .dropdown:hover .dropbtn {
 }
 
 .arrow {
-	font-size: 11px;
+	font-size: 1rem;
 }
 
 /* Highlight current navigation link (Home, HTML, CSS, ...) */
@@ -433,29 +415,26 @@ nav #current {
 /*----------------------------------------------------------------------------*/
 
 .website-logo {
-	display: block;
-	margin: 0 auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	margin: 20px auto;
 }
 
 /*----------------------------------------------------------------------------*/
 
 .serif p {
 	font-family: Arvo, Times, "Times New Roman"; 
-	font-size: 30px;
+	font-size: 3rem;
 	background-color: yellow;
 }
 
 .sans-serif p {
 	font-family: Lato, Helvetica, Arial;
-	font-size: 30px;
+	font-size: 3rem;
 	background-color: yellow;
 }
 
 .monospace p {
 	font-family: 'Roboto Mono', Courier, "Courier New";
-	font-size: 30px;
+	font-size: 3rem;
 	background-color: yellow;
 }
 
@@ -648,7 +627,7 @@ nav #current {
 }
 
 .copyright {
-	font-size: 12px;
+	font-size: 1.2rem;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(255, 255, 255, 0.5);
@@ -658,7 +637,7 @@ nav #current {
 
 .text-shadow-1 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -667,7 +646,7 @@ nav #current {
 
 .text-shadow-2 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -676,7 +655,7 @@ nav #current {
 
 .text-shadow-3 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -685,7 +664,7 @@ nav #current {
 
 .text-shadow-4 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -694,7 +673,7 @@ nav #current {
 
 .text-shadow-5 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -703,7 +682,7 @@ nav #current {
 
 .text-shadow-6 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -712,7 +691,7 @@ nav #current {
 
 .text-shadow-7 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -721,7 +700,7 @@ nav #current {
 
 .text-shadow-8 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -730,7 +709,7 @@ nav #current {
 
 .text-shadow-9 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -740,7 +719,7 @@ nav #current {
 
 .text-shadow-10 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: black;
@@ -756,7 +735,7 @@ nav #current {
 
 .text-shadow-11 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: white;
@@ -780,7 +759,7 @@ nav #current {
 
 .text-shadow-12 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: rgba(0,0,0,.3);
@@ -793,7 +772,7 @@ nav #current {
 
 .text-shadow-13 p {
 	margin: 0;
-	font-size: 100px;
+	font-size: 10rem;
 	font-weight: bold;
 	font-family: Lato, Helvetica, Arial;
 	color: white;
@@ -875,7 +854,6 @@ nav #current {
 
 .opacity-4 {
 	color: white;
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 }
@@ -910,7 +888,6 @@ nav #current {
 
 .linear-gradient {
 	color: white;
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 }
@@ -967,7 +944,6 @@ nav #current {
 
 .radial-gradient {
 	color: black;
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 }
@@ -1069,7 +1045,6 @@ nav #current {
 /* Font styling & text alignment */
 .table-1 {
 	color: black;
-	font-size: 15px;
 	font-weight: 100;
 	font-family: Lato, Helvetica, Arial;
 	margin-top: 20px;
@@ -1077,7 +1052,6 @@ nav #current {
 
 .table-1 thead {
 	color: white;
-	font-size: 20px;
 	font-weight: bold;
 	font-family: Arvo, Times, "Times New Roman"; 
 	letter-spacing: 2px;
@@ -1085,7 +1059,7 @@ nav #current {
 
 .table-1 tfoot th {
 	color: black;
-	font-size: 20px;
+	font-size: 2rem;
 	font-weight: bold;
 	font-family: Arvo, Times, "Times New Roman"; 
 	letter-spacing: 2px;
@@ -1151,7 +1125,7 @@ nav #current {
 .table-1 caption {
 	font-family: Arvo, Times, "Times New Roman"; 
 	font-weight: bold;
-	font-size: 12px;
+	font-size: 1.2rem;
 	caption-side: bottom;
 	letter-spacing: 1px;
 	text-align: left;
@@ -1218,7 +1192,7 @@ nav #current {
 /*-------------------------- Pseudo-element example --------------------------*/
 #first-letter::first-letter {
 	font-family: Arvo, Times, "Times New Roman"; 
-  font-size: 30px;
+  font-size: 3rem;
   color: red;
 }
 
