--- a/main.css
+++ b/main.css
@@ -100,7 +100,6 @@ a {
 }
 
 header {
-	background: radial-gradient(circle, gainsboro 20%, lightgray 40%, silver 60%, darkgray 80%, gray 100%);
 	/*background-image: url(background.jpg);*/
 	box-shadow: 0 1px 1px black;
 	text-align: center;
@@ -140,14 +139,6 @@ time {
 	color: rgba(255, 255, 255, 0.5);
 }
 
-/* Header navigation bar */
-.main-nav {
-	background: linear-gradient(to bottom, #2b2d32, #3b3d42);
-	overflow: hidden;
-	/* center navigation menu items */
-	text-align: center;
-}
-
 ul {
 	padding-left: 2rem;
 }
@@ -170,6 +161,35 @@ code {
 	display: block;
 	overflow: hidden;
 	padding: 2rem;
+}
+
+/*--------------------------- Main header styling ----------------------------*/
+
+/* Header navigation bar */
+.main-nav {
+	background: linear-gradient(to bottom, #2b2d32, #3b3d42);
+	overflow: hidden;
+	text-align: left;
+	width: 50%;
+	margin: 0 auto;
+}
+
+#branding-container {
+	background: radial-gradient(circle, gainsboro 20%, lightgray 40%, silver 60%, darkgray 80%, gray 100%);
+}
+
+#branding {
+	width: 50%;
+	margin: 0 auto;
+}
+
+.website-logo {
+	display: block;
+	padding: 2rem;
+}
+
+#nav-container {
+	background: linear-gradient(to bottom, #2b2d32, #3b3d42);
 }
 
 /*----------------------------- Table of Contents ----------------------------*/
@@ -278,7 +298,7 @@ article header {
 
 /* Links inside navigation bar */
 .main-nav a {
-	padding: 0 10px;
+	padding: 2rem;
 	font-style: normal;
 	font-size: 2rem;
 	font-weight: 100;
@@ -334,7 +354,7 @@ section a:hover {
 
 /* Dropdown button styling */
 .dropbtn {
-	padding: 14px 16px;
+	padding: 2rem;
 	border: none;
 	outline: none;
 	font-size: 2rem;
@@ -423,13 +443,6 @@ section a:hover {
 }
 
 /*----------------------------------------------------------------------------*/
-
-.website-logo {
-	margin: 3rem auto;
-}
-
-/*----------------------------------------------------------------------------*/
-
 .serif p {
 	font-family: Arvo, Times, "Times New Roman"; 
 	font-size: 3rem;
