--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,17 +1,24 @@
 /* BASIC ELEMENTS */
 html {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Roboto Slab', serif; 
-  font-weight: 100;
+  font-family: 'Roboto Slab', serif;
   color: #333333;
+}
+
+h1 {
+  font-weight: 400;
+}
+
+h2, h3, h4, h5 {
+  font-weight: 300;
 }
 
 #tagline {
@@ -111,6 +118,7 @@ button#return-to-top i {
 /* HEADER */
 header {
   z-index: 100;
+  background: #fafaff;
 }
 
 header .nav-link {
@@ -118,7 +126,7 @@ header .nav-link {
 }
 
 a.navbar-brand {
-  font-size: 2.5rem;
+  font-size: 40px;
   font-family: 'Audiowide', cursive;
   color: #007f7f !important;
   text-shadow: 0 1px 0 #006666,
@@ -137,7 +145,7 @@ a.navbar-brand span {
 
 /* SIDEBAR */
 div.sidebar {
-  background-color: #f1f1f1;
+  background-color: #eef0f2;
 }
 
 ol.sb-list {
@@ -163,6 +171,7 @@ ol.sb-list a {
 h5.sb-topic {
   font-size: 1rem;
   color: #333333;
+  font-weight: 400;
 }
 
 /* MAIN CONTENT */
@@ -216,7 +225,7 @@ div.content-card {
 }
 
 div.content-card .card-header {
-  background: #f1f1f1;
+  background: #eef0f2;
 }
 
 div.content-card .card-body li, div.content-card .card-body a {
@@ -226,6 +235,7 @@ div.content-card .card-body li, div.content-card .card-body a {
 h5.c-header {
   cursor: pointer;
   font-size: 1rem;
+  font-weight: 400;
 }
 
 h5.c-header[aria-expanded="true"]::after {
@@ -244,30 +254,35 @@ h5.c-header[aria-expanded="false"]::after {
 footer {
   z-index: 100 !important;
   position: relative;
+  font-size: .875rem;
 }
 
-.footer-wrapper {
-  width: 75%;
-  font-size: .7rem;
-  margin: 0 auto;
-  padding: 20px 0;
-}
-
-.footer-wrapper div:first-child {
-  padding-bottom: 10px;
-}
-
-.footer-wrapper hr {
-  margin: 20px 0;
-}
-
-.footer-wrapper a {
+footer a {
   color: #007f7f;
 }
 
-.footer-wrapper a:hover {
+footer a:hover {
   color: #007f7f;
 }
+
+footer .license {
+  background: #414347;
+  padding: 1.5rem;
+}
+
+footer .license div:last-child {
+  margin-top: .75rem;
+}
+
+footer .copyright {
+  background: #fafaff;
+  padding: 1.5rem;
+}
+
+
+
+
+/*------------------------------*/
 
 section {
   overflow: hidden;
@@ -311,6 +326,7 @@ section {
   .more-btn {
     color: rgb(0,127,127);
     text-decoration: none;
+
   }
 
   .more-btn[aria-expanded="true"]::before {
@@ -338,16 +354,16 @@ section {
   }
 }
 
-/* Responsive typography */
-@media (min-width: 480px) {
-    html {
-      font-size: 18px;
-    }
-}
-
 /* Extra large devices (large desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
     main {
         margin-left: 16.66666667%;
+    }
+}
+
+/* Responsive typography */
+@media (min-width: 480px) {
+    html {
+      font-size: 18px;
     }
 }
