--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,31 @@
 /* BASIC ELEMENTS */
 html {
-  font-size: 16px;
+  font-size: 12px;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  margin: 0;
+  color: #333;
+  text-align: left;
+  font-size: 1rem;
 }
 
 h1, h2, h3, h4, h5 {
   font-family: 'Roboto Slab', serif;
-  color: #333333;
 }
 
 h1 {
-  font-weight: 400;
+  font-weight: 100;
 }
 
 h2, h3, h4, h5 {
-  font-weight: 300;
+  font-weight: 400;
 }
 
 #tagline {
@@ -145,7 +152,7 @@ a.navbar-brand span {
 
 /* SIDEBAR */
 div.sidebar {
-  background-color: #eef0f2;
+  border-right: 1px solid #eee;
 }
 
 ol.sb-list {
@@ -160,7 +167,7 @@ ol.sb-list li {
 ol.sb-list a {
   display: block;
   color: #007f7f;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 #current {
@@ -171,7 +178,7 @@ ol.sb-list a {
 h5.sb-topic {
   font-size: 1rem;
   color: #333333;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 /* MAIN CONTENT */
@@ -214,10 +221,12 @@ ol.content-nav {
 div.card-body ol li {
   color: rgba(0,0,0,.65);
   font-size: .875rem;
+  font-weight: 200;
 }
 
 div.card-body ol li a {
   color: rgba(0,0,0,.65);
+  font-weight: 200;
 }
 
 div.content-card {
@@ -235,7 +244,7 @@ div.content-card .card-body li, div.content-card .card-body a {
 h5.c-header {
   cursor: pointer;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 h5.c-header[aria-expanded="true"]::after {
@@ -255,6 +264,7 @@ footer {
   z-index: 100 !important;
   position: relative;
   font-size: .875rem;
+  font-weight: 300;
 }
 
 footer a {
@@ -294,12 +304,10 @@ section {
 @media screen and (min-width: 768px) {
   main {
     padding: 1rem 1rem 1rem 2rem !important;
-    margin-left: 25%;
   }
   div.sidebar {
-    padding: 1rem !important;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-    position: fixed;
+    margin: 1rem 0;
+    padding: 0 1rem 0rem 1rem;
     height: 100%;
     z-index: 1;
   }
@@ -325,8 +333,11 @@ section {
 
   .more-btn {
     color: rgb(0,127,127);
-    text-decoration: none;
+  }
 
+  .more-btn:hover {
+    color: rgb(0,127,127);
+    text-decoration: none;
   }
 
   .more-btn[aria-expanded="true"]::before {
@@ -354,16 +365,33 @@ section {
   }
 }
 
-/* Extra large devices (large desktops, 1200px and up) */
-@media screen and (min-width: 1200px) {
-    main {
-        margin-left: 16.66666667%;
+/* Responsive typography */
+@media screen and (min-width: 380px) {
+    html {
+      font-size: 14px;
     }
 }
 
-/* Responsive typography */
-@media (min-width: 480px) {
+@media screen and (min-width: 610px) {
+    html {
+      font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 700px) {
     html {
       font-size: 18px;
     }
+}
+
+@media screen and (min-width: 1090px) {
+    html {
+      font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+  .container-fluid {
+    max-width: 1300px;
+  }
 }
