Change font-family to 'Font Awesome 5 Free' inside style.css

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ section {
   }
 
   .more-btn[aria-expanded="true"]::before {
-    font-family: 'FontAwesome';
+    font-family: 'Font Awesome 5 Free';
     content:"\f441";
   }
 
