--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,5 @@
+@import url("../web-fonts-with-css/css/fontawesome-all.min.css");
+
 /* roboto-slab-100 - latin */
 @font-face {
   font-family: 'Roboto Slab';
