--- a/src/css/purestyles.css
+++ b/src/css/purestyles.css
@@ -5433,6 +5433,7 @@ html {
 }
 
 *,::after,::before {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -5536,6 +5537,7 @@ button#return-to-top {
   width: 48px;
   height: 48px;
   border-radius: 50%;
+  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   z-index: 2;
 }
@@ -5714,6 +5716,7 @@ section {
   }
 
   header {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
   }
 
@@ -5753,6 +5756,7 @@ section {
 
 @media screen and (max-width: 767.99px) {
   header {
+    -webkit-box-shadow: none;
     box-shadow: none;
   }
 
@@ -5773,6 +5777,7 @@ section {
 
   div.sidebar {
     padding: .5rem 0 .5rem 1rem;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     border-top: 1px solid rgba(0,0,0,.1);
     background: #414347;
